// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`articleSelectors getArticle by urn 1`] = `
Object {
  "created": "24.12.2014",
  "footNotes": Array [],
  "id": 1,
  "language": "nb",
  "metaData": Object {},
  "metaDescription": "Beskrivelse",
  "requiredLibraries": Array [],
  "title": "Test resource 2",
  "updated": "Invalid Date",
  "urn": "urn:resource:12",
}
`;

exports[`articleSelectors getArticle by urn 2`] = `undefined`;

exports[`articleSelectors getArticle en locale 1`] = `
Object {
  "created": "12/24/2014",
  "footNotes": Array [],
  "id": 3,
  "language": "nb",
  "metaData": Object {},
  "metaDescription": "Beskrivelse",
  "requiredLibraries": Array [],
  "title": "Test resource 2",
  "updated": "11/24/2017",
  "urn": "urn:resource:2",
}
`;
